# surgical_context

./: .decisions_test  .env.example  .git_automation_note  .gitignore  .gitmodules  .graphifyignore  .semantic_test  ANALYSIS.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  PHASE_4_SUMMARY.md  README.md  README_WEEK1.md  SPEC_UPDATE_CHECKLIST.md  STEPS_4_7_IMPLEMENTATION.md  STEP_1_3_IMPLEMENTATION.md  TEST_STEPS_1_3.md  WEEK_1_COMPLETE.md  WEEK_1_IMPLEMENTATION.md  WEEK_1_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_demo.py  sonar-project.properties
.github/workflows/: ci.yml
QA/: adapt_swebench_pack_to_checkout.py  audit_proxy_surface.py  audit_proxy_surface_static.py  axis_analysis.py  axis_ask.py  axis_benchmark.py  axis_contract_report.py  axis_judge_run.py  axis_query_smoke.py  axis_role_query.py  axis_role_report.py  backfill_symbol_doc_anchors.py  baseline_reindex_2026-05-30.json  baselines_compare.py  benchmark_runs.py  bridge_output.py  build_library_marker_aliases.py  build_repobench_python_pack.py  build_swebench_python_pack.py  context_frontier.py  contextbench_adapter.py  contextbench_http_bridge.py  contextbench_prepare.py  contextbench_subset.py  cursor_baseline.py  embedding_benchmark.py  judge_table.py  library_marker_evidence.py  llm_bridge.py  llm_judge.py  make_anchor_pack.py  output_paths.py  prototype_multidim_fan_clustering.py  prototype_role_cascade.py  qa_benchmark.py  reset_databases.py  role_cascade.py  routing.py  run_demo.py  run_full_benchmark_sweep.py  (+3 more)
QA/fixtures/: new_questions_python.yaml  questions_non_python.yaml  questions_python.yaml  questions_repobench_python.yaml  questions_swebench_python.yaml  questions_swebench_python_smoke.yaml
context_engine/: bootstrap.py  context_types.py  doc_resolver.py  env_loader.py  index_profile.py  main.py  overlay.py  workspace.py  workspace_paths.py
context_engine/ai/: auth.py  engine.py  session.py
context_engine/api/: __init__.py  app.py  config.py  deps.py  route_services.py  sse.py  state.py  warmup.py  workspace_security.py
context_engine/ask/: __init__.py  context_builder.py  service.py
context_engine/auth/: __init__.py  audit_log.py  user_auth.py
context_engine/axis/: __init__.py  adjacency_bridges.py  axis_phased.py  axis_profiles.py  axis_ranking.py  container_kind.py  context_builder.py  contract_compiler.py  cross_role_boost.py  doc_anchor_bridge.py  edge_json.py  graph_probe.py  graph_walk.py  graph_walk_inproc.py  hook_api_bridge.py  http_endpoint_bridge.py  impact_surface.py  impact_traversal.py  inheritance_ancestors.py  intent_classifier.py  kind_rows.py  library_marker_aliases.json  library_marker_aliases.py  library_marker_catalogue.py  overlay_context.py  overlay_impact.py  pipeline.py  prompt_provider.py  proximity.py  python_extractor.py  query_node_ranking.py  query_plan.py  reexport_bridge.py  retrieval_budget.py  role_lookahead.py  role_resolver.py  role_retrieval.py  schema.py  seed_selector.py  stage_warnings.py  (+4 more)
context_engine/cache/: __init__.py  layered.py
context_engine/database/: aura_client.py  embedding_cache.py  embedding_registry.py  lance_workspace_tables.py  lancedb_client.py  neo4j_client.py  neo4j_env.py  provider.py  session.py
context_engine/eval/: __init__.py  embedding_benchmark.py
context_engine/feedback/: __init__.py  store.py
context_engine/history/: __init__.py  sqlite_provider.py
context_engine/indexer/: affects.py  anchor.py  code.py  docs.py  external_boundary.py  external_facts.py  file_tier.py  framework_hints.py  git_committed.py  git_delta.py  git_delta_poller.py  git_sync.py  http_endpoint.py  mro_api_bridge.py  progress.py  queue.py  repository_profile.py  role_cascade.py  role_clustering.py  service.py  signal_constants.py  ts_http_route_hints.py
context_engine/observability/: __init__.py  metrics.py  tracing.py
context_engine/parser/: derived_facts.py  docstring_extract.py  extractor.py  import_scan.py  protocol.py  registry.py  uid.py
context_engine/retrieval/: __init__.py  adapters.py  fakes.py  manifest.py  protocols.py  trace.py
docs/: DOCS_STYLE_GUIDE.md  README.md  WEEK_1_SYNCHRONIZATION.md  architectura.md  architectural_review.md  axis_terminology.md  benchmark_all_repos_context_comparison.md  benchmark_mechanism_coverage.md  benchmark_path1_vs_path2.md  cascade_cleanup_inventory.md  concept.md  contract_compiler_topology_principle.md  doc_anchor_seed_plan.md  engineering_principles.md  file_tier_signal.md  hybrid_symbol_retrieval.md  idea_summary.md  local_development.md  logical_roles_structural_closure.md  mechanism_contract_unification.md  optimization.txt  product_direction_memo.md  project_gap_analysis.md  python_ast_axes_and_traversal_modes.md  python_ast_axis_fact_gap_analysis.md  question_structural_role_profiles.md  retrieval_kernel.md  review_findings_2026-04-17.md  road_map.md  role_catalog.md  role_clustering_architecture.md  role_predicates.md  role_signature_findings.md  spec_affects_index.md  spec_arbitrator.md  spec_branch_isolation.md  spec_call_resolution_pipeline.md  spec_context_deduplicator.md  spec_context_retrieval_layers.md  spec_contextbench.md  (+27 more)
extension/: .vscodeignore  PERFORMANCE_TESTING.md  esbuild.js  package-lock.json  package.json  run-perf-tests.js  tsconfig.json
graphify-obsidian-repo/: .graphifyignore  README.md  setup.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html
mcp_server/: README.md  claude_mcp.example.json  codex_config.example.toml  pyproject.toml  requirements.txt
mcp_server/surgical_context_mcp/: __init__.py  __main__.py  config.py  contextbench_log.py  engine.py  schemas.py  server.py
scripts/: REBUILD-CLEAN.md  axis_ts_parity.py  backfill_signature_vectors.py  local_dev.py  rebuild-clean.sh  reindex_bench_repos.sh
sidecar/: doc_resolver.py  index_profile.py  main.py  overlay.py  silence.py  workspace.py  workspace_paths.py
tests/: conftest.py
(+484 files in other folders)
