[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical-context"
version = "0.1.0"
description = "AI-powered VS Code extension for surgical code analysis"

[tool.ruff]
target-version = "py312"
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "F811"]
"context_engine/main.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["QA/repos", "data", "graphify-out"]
markers = [
    "integration: tests that require live Neo4j/LanceDB (pass --run-integration)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
explicit_package_bases = true
namespace_packages = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
# FastAPI special-cases plain ``Request`` for injection (``Request | None``
# breaks it), yet endpoints carry a ``= None`` default so the route functions
# stay directly callable in unit tests. Allow the implicit-optional default here.
module = "context_engine.api.routes.*"
implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "anthropic",
  "neo4j",
  "tree_sitter",
  "pathspec",
  "torch",
  "ollama",
  "sentence_transformers",
  "lancedb",
  "pyarrow",
  "pyarrow.compute",
  "yaml",
  "tqdm",
  "opentelemetry",
  "opentelemetry.*",
]
ignore_missing_imports = true
