[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical-context-mcp"
version = "0.1.0"
description = "MCP server exposing surgical_context's axis retrieval to LLM chats"
requires-python = ">=3.12"
# Runtime also requires the sibling ``context_engine`` package (this repo) to be
# importable — install it / run from the repo root venv. See README.md.
dependencies = ["mcp>=1.2"]

[project.scripts]
surgical-context-mcp = "surgical_context_mcp.server:main"

[tool.setuptools]
packages = ["surgical_context_mcp"]
